--- a/Resources/views/Customer/orders.html.twig
+++ b/Resources/views/Customer/orders.html.twig
@@ -50,7 +50,7 @@
                         {% endfor %}
                     {% else %}
                     <tr>
-                        <td colspan="4">No Orders Found</td>
+                        <td colspan="4" class="text-center">No Orders Found</td>
                     </tr>
                     {% endif %}
                 </table>
