--- a/Resources/views/Email/register_confirmed.html.twig
+++ b/Resources/views/Email/register_confirmed.html.twig
@@ -1,7 +1,7 @@
 {% extends layout('email') %}
 
 {% block content %}
-<p>Hello {{ first_name }} {{ last_name }},</p>
+<p>Hello {{ billing_firstname }} {{ billing_lastname }},</p>
 <p>Your account has been confirmed</p>
 <p>Thank you again for being a customer.</p>
 {% endblock %}
