--- a/Resources/views/Shared/header-bar.html.twig
+++ b/Resources/views/Shared/header-bar.html.twig
@@ -4,6 +4,7 @@
         <ul class="nav navbar-nav nav-tabs">
             <li><a class="navbar-link" href="{{ path('cart_products') }}">Products</a></li>
             <li><a class="navbar-link" href="{{ path('cart_categories') }}">Categories</a></li>
+            <li><a class="navbar-link" href="{{ path('cart_contents') }}">Articles</a></li>
         </ul>
     </div>
     <div class="col-xs-6">
