--- a/Resources/views/CustomerAddress/index.html.twig
+++ b/Resources/views/CustomerAddress/index.html.twig
@@ -19,7 +19,9 @@
         <div class="col-sm-12">
             <table class="table table-striped table-bordered table-hover">
                 <tr>
-                    <th>Name</th>
+                    <th>&nbsp;</th>
+                    <th>First Name</th>
+                    <th>Last Name</th>
                     <th>City</th>
                     <th>Region</th>
                     <th>Country</th>
@@ -28,7 +30,11 @@
                 {% if result.entities|length > 0 %}
                     {% for entity in result.entities %}
                     <tr>
-                        <td><a href="{{ path('customer_address_edit', {'id': entity.id}) }}">{{ entity.name }}</a></td>
+                        <td>
+                            <a href="{{ path('customer_address_edit', {'id': entity.id}) }}">Edit</a>
+                        </td>
+                        <td>{{ entity.firstname }}</td>
+                        <td>{{ entity.lastname }}</td>
                         <td>{{ entity.city }}</td>
                         <td>{{ entity.region }}</td>
                         <td>{{ entity.country_id }}</td>
@@ -41,7 +47,7 @@
                     {% endfor %}
                 {% else %}
                     <tr>
-                        <td colspan="5" class="text-center">No Addtl. Addresses Have Been Saved</td>
+                        <td colspan="7" class="text-center">No Addtl. Addresses Have Been Saved</td>
                     </tr>
                 {% endif %}
             </table>
